# luping

./: .gitignore  PACKAGING.md  QUICKSTART.md  README.md  Windows快速开始.md  Windows打包说明.md  Windows测试说明.md  build-all.sh  build-windows.bat  build.sh  fix-app.sh  font_debug.txt  main.py  pyproject.toml  test_font_apply.py  test_gui_simple.py  test_simple.py  应用无法打开解决方案.md  打包说明.md  检查事件记录问题.md  检查视频文件.py  测试应用.sh  键盘鼠标事件记录说明.md
.github/workflows/: build.yml
Resources/fonts/: NOTICE.txt
luping/: __init__.py  gui.py  recorder.py  recorder_no_pynput.py
tools/: fetch_noto.py  font_probe.py  inspect_ttf.py  quick_record.py  run_pyinstaller.py
